--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-06-26 09:59+0200\n"
+"POT-Creation-Date: 2025-06-26 11:02+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -711,6 +711,9 @@ msgstr "Zahlung"
 
 msgid "VAT"
 msgstr "MwSt"
+
+msgid "${vat_rate}% included"
+msgstr "${vat_rate}% enthalten"
 
 msgid "State"
 msgstr "Status"
