--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-06-26 09:59+0200\n"
+"POT-Creation-Date: 2025-06-26 11:02+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -711,6 +711,9 @@ msgstr "Paiement"
 
 msgid "VAT"
 msgstr "TVA"
+
+msgid "${vat_rate}% included"
+msgstr "${vat_rate}% incluse"
 
 msgid "State"
 msgstr "État"
