--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2025-06-26 09:59+0200\n"
+"POT-Creation-Date: 2025-06-26 11:02+0200\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -708,6 +708,9 @@ msgstr "Pagamento"
 
 msgid "VAT"
 msgstr "IVA"
+
+msgid "${vat_rate}% included"
+msgstr "${vat_rate}% inclusa"
 
 msgid "State"
 msgstr "Stato"
