--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-06-11 13:31+0200\n"
+"POT-Creation-Date: 2025-06-26 11:03+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -111,8 +111,14 @@ msgstr "Remboursé"
 msgid "Manual"
 msgstr "Manuelle"
 
+msgid "Datatrans"
+msgstr "Datatrans"
+
 msgid "Stripe Connect"
 msgstr "Stripe Connect"
+
+msgid "Worldline Saferpay"
+msgstr "Worldline Saferpay"
 
 #, python-format
 msgid "Daily Newsletter ${time}"
@@ -969,6 +975,14 @@ msgid ""
 msgstr ""
 "Décrit la manière dont cette ressource peut être récupérée. Ce texte est "
 "utilisé sur la page de statut du ticket pour informer le client"
+
+msgid "Show VAT"
+msgstr "Afficher la TVA"
+
+msgid "By default VAT is not shown, even when configured in the VAT settings."
+msgstr ""
+"Par défaut, la TVA n'est pas affichée, même si elle est configurée dans les "
+"paramètres."
 
 msgid "Short description of the survey"
 msgstr "Description courte de l'enquête"
@@ -2671,9 +2685,6 @@ msgstr "Association sportive"
 msgid "all day"
 msgstr "toute la journée"
 
-msgid "VAT"
-msgstr "TVA"
-
 msgid "Homepage"
 msgstr "Page d'accueil"
 
@@ -2999,12 +3010,6 @@ msgstr "Exports"
 
 msgid "Payment Providers"
 msgstr "Opérateurs de paiement"
-
-msgid "Datatrans"
-msgstr "Datatrans"
-
-msgid "Worldline Saferpay"
-msgstr "Worldline Saferpay"
 
 msgid "Synchronise"
 msgstr "Synchroniser"
@@ -4036,6 +4041,21 @@ msgstr "Demande de modification"
 msgid "New Entry"
 msgstr "Nouvelle entrée"
 
+msgid "Credit Card Fee"
+msgstr "Frais de carte de crédit"
+
+msgid "VAT"
+msgstr "TVA"
+
+msgid "${vat_rate}% included"
+msgstr "${vat_rate}% incluse"
+
+msgid "Offline Payment"
+msgstr "Facture"
+
+msgid "Online Payment"
+msgstr "Paiement en ligne"
+
 msgid "Previous Page"
 msgstr "Page précédente"
 
@@ -4160,9 +4180,6 @@ msgstr "M'envoyer mes données saisies par e-mail."
 
 msgid "Pay Online Now"
 msgstr "Payer en ligne maintenant"
-
-msgid "Credit Card Fee"
-msgstr "Frais de carte de crédit"
 
 msgid "Pay Offline later"
 msgstr "Payer hors ligne plus tard"
