--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-06-26 11:03+0200\n"
+"POT-Creation-Date: 2025-06-26 13:21+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -4034,11 +4034,14 @@ msgstr "Nuovo elemento"
 msgid "Credit Card Fee"
 msgstr "Commissione sulla carta di credito"
 
+msgid "${vat_rate}% included"
+msgstr "${vat_rate}% inclusa"
+
 msgid "VAT"
 msgstr "IVA"
 
-msgid "${vat_rate}% included"
-msgstr "${vat_rate}% inclusa"
+msgid "Value Added Tax"
+msgstr "Imposta sul valore aggiunto"
 
 msgid "Offline Payment"
 msgstr "Fattura"
@@ -4171,7 +4174,7 @@ msgid "Pay Online Now"
 msgstr "Paga ora online"
 
 msgid "Pay Offline later"
-msgstr "Paga offline successivamente"
+msgstr "Pagare con fattura"
 
 msgid "Show more"
 msgstr "Mostra di più"
@@ -6645,9 +6648,6 @@ msgid ""
 msgstr ""
 "Procedere con cautela. I biglietti e i dati in essi contenuti possono essere "
 "irrevocabilmente cancellati."
-
-msgid "Value Added Tax"
-msgstr "Imposta sul valore aggiunto"
 
 msgid "Chat"
 msgstr "Chat"
