--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-06-26 11:02+0200\n"
+"POT-Creation-Date: 2025-06-26 13:21+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -709,8 +709,8 @@ msgstr "Verzeichnis"
 msgid "Payment"
 msgstr "Zahlung"
 
-msgid "VAT"
-msgstr "MwSt"
+msgid "Value Added Tax"
+msgstr "Mehrwertsteuer"
 
 msgid "${vat_rate}% included"
 msgstr "${vat_rate}% enthalten"
@@ -718,26 +718,17 @@ msgstr "${vat_rate}% enthalten"
 msgid "State"
 msgstr "Status"
 
-msgid "Open"
-msgstr "Offen"
-
-msgid "Paid"
-msgstr "Bezahlt"
-
-msgid "Failed"
-msgstr "Fehlgeschlagen"
-
-msgid "Refunded"
-msgstr "Rückerstattet"
-
-msgid "Source"
-msgstr "Herkunft"
+msgid "Payment Method"
+msgstr "Zahlungsmethode"
 
 msgid "Offline Payment"
 msgstr "Rechnung"
 
 msgid "Online Payment"
 msgstr "Online-Zahlung"
+
+msgid "Source"
+msgstr "Herkunft"
 
 msgid "Manual"
 msgstr "Manuell"
@@ -760,6 +751,9 @@ msgstr "Organisation"
 msgid "Functions:"
 msgstr "Funktionen:"
 
+msgid "Open"
+msgstr "Offen"
+
 msgid "Pending"
 msgstr "In Bearbeitung"
 
@@ -768,6 +762,15 @@ msgstr "Abgeschlossen"
 
 msgid "Archived"
 msgstr "Archiviert"
+
+msgid "Paid"
+msgstr "Bezahlt"
+
+msgid "Failed"
+msgstr "Fehlgeschlagen"
+
+msgid "Refunded"
+msgstr "Rückerstattet"
 
 msgid "Ticket"
 msgstr "Ticket"
@@ -1307,6 +1310,9 @@ msgstr ""
 
 msgid "Pending approval"
 msgstr "Noch nicht akzeptiert"
+
+msgid "VAT"
+msgstr "MwSt"
 
 msgid "A new entry has been added to the \"${directory}\" directory:"
 msgstr "Ein neuer Eintrag wurde im Verzeichnis \"${directory}\" hinzugefügt:"
@@ -2320,9 +2326,6 @@ msgstr ""
 
 msgid "Push Notification Overview"
 msgstr "Übersicht Push-Benachrichtigungen"
-
-msgid "Value Added Tax"
-msgstr "Mehrwertsteuer"
 
 msgid "New Note"
 msgstr "Neue Notiz"
