Org: Allows setting a shared e-mail for immediate ticket notifications
TYPE: Feature
LINK: OGC-2360

--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-06-26 13:21+0200\n"
+"POT-Creation-Date: 2025-06-26 15:55+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -2578,6 +2578,17 @@ msgid "Immediate e-mail notification to members upon ticket submission"
 msgstr ""
 "Notification immédiate par courrier électronique aux membres lors de la "
 "soumission d'un ticket"
+
+msgid ""
+"Also gives permission to these ticket categories, but does not restrict "
+"access to other groups."
+msgstr ""
+"Donne également l'autorisation à ces catégories de billets, mais ne "
+"restreint pas l'accès à d'autres groupes."
+
+msgid "Shared e-mail address for ticket submission notifications"
+msgstr ""
+"Adresse électronique partagée pour les notifications de soumission de ticket"
 
 msgid "Send a periodic status e-mail."
 msgstr "Envoyer un e-mail d'état périodique."
