--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-06-26 13:21+0200\n"
+"POT-Creation-Date: 2025-06-26 15:55+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2577,6 +2577,16 @@ msgstr "Limita l'accesso e autorizza queste categorie di biglietti"
 msgid "Immediate e-mail notification to members upon ticket submission"
 msgstr ""
 "Notifica immediata via e-mail ai membri al momento dell'invio del ticket"
+
+msgid ""
+"Also gives permission to these ticket categories, but does not restrict "
+"access to other groups."
+msgstr ""
+"Fornisce l'autorizzazione anche a queste categorie di biglietti, ma non "
+"limita l'accesso ad altri gruppi."
+
+msgid "Shared e-mail address for ticket submission notifications"
+msgstr "Indirizzo e-mail condiviso per le notifiche di invio dei ticket"
 
 msgid "Send a periodic status e-mail."
 msgstr "Invia un'e-mail di stato periodica."
