--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-06-26 13:21+0200\n"
+"POT-Creation-Date: 2025-06-26 15:55+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -2567,6 +2567,17 @@ msgstr ""
 
 msgid "Immediate e-mail notification to members upon ticket submission"
 msgstr "Unmittelbare E-Mail-Benachrichtigung an Mitglieder bei Ticketeingang"
+
+msgid ""
+"Also gives permission to these ticket categories, but does not restrict "
+"access to other groups."
+msgstr ""
+"Erteilt zudem die Berechtigung für die ausgewählten Ticketkategorien, aber "
+"schränkt den Zugriff nicht ein."
+
+msgid "Shared e-mail address for ticket submission notifications"
+msgstr ""
+"Geteilte E-Mail Adresse für E-Mail-Benachrichtigungen beim Ticketeingang"
 
 msgid "Send a periodic status e-mail."
 msgstr "Ein periodisches Status E-Mail senden."
